--- a/Register.html
+++ b/Register.html
@@ -47,7 +47,7 @@
         <div class="col-sm-12">
             <br /> <br /><br />
             <h2>Register User</h2>
-            <form id="regForm">
+            <form id="registrationForm">
                 <div class="form-group mb-3">
                     <label for="firstName">Forename</label>
                     <input type="text" id="firstName" name="firstName"
