--- a/home.html
+++ b/home.html
@@ -19,6 +19,10 @@
         <li class="nav-item">
             <a class="nav-link" href='AddImage.html'>Upload A Post</a>
         </li>
+        <li class="navbar-nav pull-right">
+            <a class="nav-link"
+               href="FollowUsers.html">Userlist</a>
+        </li>
         <li class="nav-item">
             <a class="nav-link"
                href="Register.html">Register</a>
@@ -30,7 +34,7 @@
         <div class = "form-inline ms-auto"
              style = "margin-left: 800px !important;">
             <button id="logoutbtn"class="btn btn-outline-light"
-                    (click) = "onSubmit()">Logout</button>
+                    onclick="logout()">Logout</button>
         </div>
     </ul>
 </div>
