--- a/index.html
+++ b/index.html
@@ -12,37 +12,40 @@
       <script type="text/javascript" src="JS/app.js"></script>
 
   </head>
-
-        <div class="navbar navbar-expand-sm bg-dark
+  <div class="navbar navbar-expand-sm bg-dark
             navbar-dark fixed-top">
           <span class="navbar-brand">
             Image.io
           </span>
-          <ul class="navbar-nav">
-              <li class="nav-item">
-                  <a class="nav-link" href="home.html">Home</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="index.html">Feed</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href='AddImage.html'>Upload A Post</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link"
-                     href="Register.html">Register</a>
-              </li>
-              <li class="navbar-nav pull-right">
-                  <a class="nav-link"
-                     href="login.html">Login</a>
-              </li>
-              <div class = "form-inline ms-auto"
-                   style = "margin-left: 800px !important;">
-                  <button id="logoutbtn"class="btn btn-outline-light"
-                          (click) = "onSubmit()">Logout</button>
-              </div>
-          </ul>
-      </div>
+      <ul class="navbar-nav">
+          <li class="nav-item">
+              <a class="nav-link" href="home.html">Home</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="index.html">Feed</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href='AddImage.html'>Upload A Post</a>
+          </li>
+          <li class="navbar-nav pull-right">
+              <a class="nav-link"
+                 href="FollowUsers.html">Userlist</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link"
+                 href="Register.html">Register</a>
+          </li>
+          <li class="navbar-nav pull-right">
+              <a class="nav-link"
+                 href="login.html">Login</a>
+          </li>
+          <div class = "form-inline ms-auto"
+               style = "margin-left: 800px !important;">
+              <button id="logoutbtn"class="btn btn-outline-light"
+                      onclick="logout()">Logout</button>
+          </div>
+      </ul>
+  </div>
   <body>
 
     <div  class="container">
