--- a/login.html
+++ b/login.html
@@ -27,6 +27,10 @@
         <li class="nav-item">
             <a class="nav-link" href='AddImage.html'>Upload A Post</a>
         </li>
+        <li class="navbar-nav pull-right">
+            <a class="nav-link"
+               href="FollowUsers.html">Userlist</a>
+        </li>
         <li class="nav-item">
             <a class="nav-link"
                href="Register.html">Register</a>
@@ -38,7 +42,7 @@
         <div class = "form-inline ms-auto"
              style = "margin-left: 800px !important;">
             <button id="logoutbtn"class="btn btn-outline-light"
-                    (click) = "onSubmit()">Logout</button>
+                    onclick="logout()">Logout</button>
         </div>
     </ul>
 </div>
@@ -59,7 +63,7 @@
                            class="form-control" formControlName="password">
                 </div>
                 <br />
-                <button type="submit" onclick="login()" class="btn btn-primary">Submit</button>
+                <button type="button" onclick="login()" class="btn btn-primary">Submit</button>
             </form>
         </div>
     </div>
