--- a/AddImage.html
+++ b/AddImage.html
@@ -13,7 +13,6 @@
 
 </head>
 
-
 <div class="navbar navbar-expand-sm bg-dark
             navbar-dark fixed-top">
           <span class="navbar-brand">
@@ -27,7 +26,13 @@
             <a class="nav-link" href="index.html">Feed</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href='AddImage.html'>Upload A Post</a>
+            <a class="nav-link" href='AddImage.html' style="
+                width: 106px;">Upload Post</a>
+        </li>
+        <li class="navbar-nav pull-right">
+            <a class="nav-link"
+               href="MyPosts.html"style="
+                width: 90px;">My Posts</a>
         </li>
         <li class="navbar-nav pull-right">
             <a class="nav-link"
@@ -42,12 +47,13 @@
                href="login.html">Login</a>
         </li>
         <div class = "form-inline ms-auto"
-             style = "margin-left: 800px !important;">
+             style = "margin-left: 700px !important;">
             <button id="logoutbtn"class="btn btn-outline-light"
                     onclick="logout()">Logout</button>
         </div>
     </ul>
 </div>
+
 <body>
 
 <div  class="container">
