--- a/MyPosts.html
+++ b/MyPosts.html
@@ -2,8 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Image.io</title>]
-
+    <title>Image.io</title>
+</head>
+<body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Image.io</title>
     <link rel="stylesheet" type="text/css" href="CSS/bootstrap.min.css">
     <script type="text/javascript" src="JS/bootstrap.js"></script>
     <script type="text/javascript" src="JS/bootstrap.bundle.min.js"></script>
@@ -52,30 +58,24 @@
         </div>
     </ul>
 </div>
+<br /><br />
+<div  class="container">
 
-<div class="container">
-    <div class="row">
-        <div class="col-sm-12">
-            <br /> <br /><br />
-            <h2>Login</h2>
-            <form id="loginForm">
-                <div class="form-group">
-                    <label for="username">username</label>
-                    <input type="text" id="username" rows="3" name="username"
-                           class="form-control" formControlName="username">
-                </div>
-                <div class="form-group">
-                    <label for="password">password</label>
-                    <input type="password" id="password" rows="3" name="password"
-                           class="form-control" formControlName="password">
-                </div>
-                <br />
-                <button type="button" onclick="login()" class="btn btn-primary">Submit</button>
-            </form>
+    <!--Header-->
+    <div class="row align-items-start">
+        <div class="col-2"  ></div>
+
+        <div class="col-8" style="text-align: center;">
+            <br /><br /><br />
+            <h3>My Posts</h3>
         </div>
+
+        <div class="col-2"  ></div>
+    </div>
+    <div id="getMyPosts">
+
+
     </div>
 </div>
-
-
 </body>
 </html>
