--- a/Register.html
+++ b/Register.html
@@ -25,7 +25,13 @@
             <a class="nav-link" href="index.html">Feed</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href='AddImage.html'>Upload A Post</a>
+            <a class="nav-link" href='AddImage.html' style="
+                width: 106px;">Upload Post</a>
+        </li>
+        <li class="navbar-nav pull-right">
+            <a class="nav-link"
+               href="MyPosts.html"style="
+                width: 90px;">My Posts</a>
         </li>
         <li class="navbar-nav pull-right">
             <a class="nav-link"
@@ -40,12 +46,13 @@
                href="login.html">Login</a>
         </li>
         <div class = "form-inline ms-auto"
-             style = "margin-left: 800px !important;">
-            <button id="logoutbtn"class="btn btn-outline-light" type="button"
+             style = "margin-left: 700px !important;">
+            <button id="logoutbtn"class="btn btn-outline-light"
                     onclick="logout()">Logout</button>
         </div>
     </ul>
 </div>
+
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
